--- a/The Beagle Blog/index.html
+++ b/The Beagle Blog/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Ankit Kumar Frontend 1 AccioJob 7 January 2023</title>
 </head>
 <body>
@@ -11,9 +12,9 @@
     <p>The <b>beagle</b> is a breed of small scent hound, similar in appearance to the much larger foxhound. The <b>beagle</b> was developed primarily for hunting hare, known as beagling. Possessing a great sense of smell and superior tracking instincts, the <b>beagle</b> is the primary breed used as a detection dog for prohibited agricultural imports and foodstuffs in quarantine around the world. The <b>beagle</b> is intelligent and is a popular pet due to its size, good temper, and a lack of inherited health problems.</p>
     <a href="https://en.wikipedia.org/wiki/Beagle">Read more</a>
     <h1>Images</h1>
-    <img src="assets/images/Beagle.jpeg" alt="Beagle Image" >
+    <img src="assets/images/Beagle.jpeg" alt="Beagle Image" ><br>
     <a href="https://www.google.com/search?q=beagle&rlz=1C5CHFA_enUS944US945&sxsrf=ALiCzsYi_xLzuX5-mgRt-U2UMiiEwhaCTA:1672839794160&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiat8ntha78AhVnDbcAHX7UCYYQ_AUoAXoECAEQAw&biw=1629&bih=894&dpr=2.2">More Images</a>
-    <h1><u>Trivia</u></h1>
+    <h1>Trivia</h1>
     <ol>
         <li>Height - 13-16 in (33-41 cm)</li>
         <li>Weight - 22-25 lb (10.0-11.3 kg)</li>
